Fix code highlight icon shrinking and file name wrapping

--- a/src/mantine-code-highlight/src/CodeHighlight.module.css
+++ b/src/mantine-code-highlight/src/CodeHighlight.module.css
@@ -66,6 +66,7 @@
   color: var(--_file-color);
   opacity: var(--_file-opacity);
   background-color: var(--_file-bg);
+  white-space: nowrap;
 
   @mixin hover {
     --_file-opacity: 1;
@@ -152,4 +153,15 @@
 .root {
   margin-top: 0;
   position: relative;
+}
+
+.fileIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0;
+
+  & > svg {
+    display: block;
+  }
 }
